# calculator-gui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  command.txt  imgui.ini  run.ps1  test.ps1
app/: main.cpp
cli/: cli_main.cpp  repl.cpp  repl.hpp
core/include/calculator/: calculator.hpp  parser_util.hpp
core/src/calculator/: calculator.cpp  evaluator.cpp  parser.cpp  parser_util.cpp
docs/: UML.md
gui/: CMakeLists.txt  gui_main.cpp  gui_renderer.cpp  gui_renderer.hpp
include/calculator/: calculator.h  calculator.hpp  evaluator.h  evaluator.hpp  parser.h  parser.hpp  parser_util.hpp  repl.hpp  token.h  token.hpp  tokenizer.h  tokenizer.hpp
src/calculator/: calculator.cpp  evaluator.cpp  parser.cpp  parser_util.cpp  repl.cpp  tokenizer.cpp
test/: test_calculator.cpp  test_evaluator.cpp  test_main.cpp  test_parser.cpp  test_tokenizer.cpp
